[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pvua"
version = "0.0.1"
authors = [
    { name="Laura Lewis", email="lxlewis@slac.stanford.edu" },
]
description = "A light wrapper around p4p and pyepics."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/slac-epics/pvua"
Issues = "https://github.com/slac-epics/pvua/issues"
